--- a/technical-documentation/pom.xml
+++ b/technical-documentation/pom.xml
@@ -17,7 +17,7 @@
 		<plugins>
 			<plugin>
 				<groupId>org.meveo</groupId>
-				<artifactId>header-maven-plugin</artifactId>
+				<artifactId>meveo-header-maven-plugin</artifactId>
 				<executions>
 					<execution>
 						<id>add-file-headers</id>
